# japanpost-tracker

./: README.md  pyproject.toml  vercel.json
.github/workflows/: calendar_sync.yml  check.yml  register.yml
api/: tracking.py
data/: sync_mappings.json
japanpost_tracker/: __init__.py  scraper.py  yamato_scraper.py
scripts/: calendar_sync.py  check.py  requirements.txt
