[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "japanpost-tracker"
version = "1.1.0"
description = "日本郵便・ヤマト運輸の追跡番号をスクレイプして配送状況を取得するライブラリ"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.12",
]

[project.urls]
Homepage = "https://github.com/hirorogo/japanpost-tracker"

[tool.setuptools.packages.find]
include = ["japanpost_tracker*"]
